@@ -4,7 +4,7 @@
 # not continually reading --help!
 
 # Version of Kismet config
-version=2.9.1b
+version=2.9.1c
 
 # Name of server (Purely for organiational purposes)
 servername=Kismet
@@ -178,6 +178,9 @@ beaconlog=true
 
 # Do we log PHY layer packets or do we filter them out of the dumpfile
 phylog=true
+
+# Do we mangle packets if we can decrypt them or if they're fuzzy-detected
+mangledatalog=true
 
 # Do we do "fuzzy" crypt detection?  (byte-based detection instead of 802.11
 # frame headers)
