@@ -43,6 +43,8 @@ public:
     void SetBeaconLog(int in_log) { beacon_log = in_log; };
     // Do we log phy-layer stuff?
     void SetPhyLog(int in_log) { phy_log = in_log; };
+    // Do we mangle packets?
+    void SetMangleLog(int in_log) { mangle_log = in_log; };
 
     // Get the number of packets
     int FetchDumped() { return(num_dumped); };
@@ -64,6 +66,7 @@ protected:
     int num_dumped;
     int beacon_log;
     int phy_log;
+    int mangle_log;
 
     map<mac_addr, string> beacon_logged_map;
 
