@@ -60,9 +60,27 @@ int WtapDumpFile::DumpPacket(const packet_info *in_info, const kis_packet *packe
     if (in_info->type == packet_phy && phy_log == 0)
         return 0;
 
-    Common2Wtap(packet);
+    kis_packet *dump_packet;
+    int mangled = 0;
+
+    // Mangle decrypted and fuzzy packets into legit packets
+    if ((dump_packet = MangleDeCryptPacket(packet, in_info)) != NULL)
+        mangled = 1;
+    else if ((dump_packet = MangleFuzzyCryptPacket(packet, in_info)) != NULL)
+        mangled = 1;
+    else
+        dump_packet = (kis_packet *) packet;
+
+    Common2Wtap(dump_packet);
 
     wtap_dump(dump_file, &packet_header, NULL, packet_data, &wtap_error);
+
+    if (mangled == 1) {
+        delete[] dump_packet->data;
+        if (dump_packet->moddata != NULL)
+            delete[] dump_packet->moddata;
+        delete dump_packet;
+    }
 
     num_dumped++;
 
